// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`frodo config-manager push journeys "frodo config-manager push journeys --directory test/e2e/exports/fr-config-manager/forgeops -m forgeops": should import journeys into a specific realm" 1`] = `""`;

exports[`frodo config-manager push journeys "frodo config-manager push journeys --directory test/e2e/exports/fr-config-manager/forgeops -m forgeops": should import journeys into a specific realm" 2`] = `
"Experimental feature in use: 'frodo config-manager push journeys'. This feature may change without notice.
✔ Resolved all alpha realm dependencies.
• Finished importing alpha realm journeys
"
`;

exports[`frodo config-manager push journeys "frodo config-manager push journeys -D test/e2e/exports/fr-config-manager/forgeops -m forgeops": should import the journeys into forgeops" 1`] = `""`;

exports[`frodo config-manager push journeys "frodo config-manager push journeys -D test/e2e/exports/fr-config-manager/forgeops -m forgeops": should import the journeys into forgeops" 2`] = `
"Experimental feature in use: 'frodo config-manager push journeys'. This feature may change without notice.
✔ Resolved all alpha realm dependencies.
• Finished importing alpha realm journeys
✔ Resolved all / realm dependencies.
• Finished importing / realm journeys
"
`;

exports[`frodo config-manager push journeys "frodo config-manager push journeys -d -D test/e2e/exports/fr-config-manager/forgeops -m forgeops": should resolve dependencies when importing to  forgeops" 1`] = `""`;

exports[`frodo config-manager push journeys "frodo config-manager push journeys -d -D test/e2e/exports/fr-config-manager/forgeops -m forgeops": should resolve dependencies when importing to  forgeops" 2`] = `
"Experimental feature in use: 'frodo config-manager push journeys'. This feature may change without notice.
✔ Resolved all alpha realm dependencies.
• Finished importing alpha realm journeys
✔ Resolved all / realm dependencies.
• Finished importing / realm journeys
"
`;

exports[`frodo config-manager push journeys "frodo config-manager push journeys -n ProgressiveProfile -D test/e2e/exports/fr-config-manager/forgeops -m forgeops": should import a specific journey by name into forgeops" 1`] = `""`;

exports[`frodo config-manager push journeys "frodo config-manager push journeys -n ProgressiveProfile -D test/e2e/exports/fr-config-manager/forgeops -m forgeops": should import a specific journey by name into forgeops" 2`] = `
"Experimental feature in use: 'frodo config-manager push journeys'. This feature may change without notice.
✔ Resolved all alpha realm dependencies.
• Finished importing alpha realm journeys
"
`;

exports[`frodo config-manager push journeys "frodo config-manager push journeys -n Test -d -D test/e2e/exports/fr-config-manager/forgeops -m forgeops": should import a journey with dependencies" 1`] = `""`;

exports[`frodo config-manager push journeys "frodo config-manager push journeys -n Test -d -D test/e2e/exports/fr-config-manager/forgeops -m forgeops": should import a journey with dependencies" 2`] = `
"Experimental feature in use: 'frodo config-manager push journeys'. This feature may change without notice.
✔ Resolved all / realm dependencies.
• Finished importing / realm journeys
"
`;
